# crystaxis

./: Cargo.toml
crates/crystaxis_app/: Cargo.toml
crates/crystaxis_app/src/: main.rs
crates/crystaxis_core/: Cargo.toml
crates/crystaxis_core/src/: commands.rs  components.rs  lib.rs  plugin.rs  resources.rs
crates/crystaxis_core/src/systems/: instance_data.rs  mod.rs  movement.rs  physics_set.rs  queue.rs  spawn.rs  verlet.rs
crates/crystaxis_input/: Cargo.toml
crates/crystaxis_input/src/: lib.rs  plugin.rs
crates/crystaxis_input/src/systems/: keyboard.rs
crates/crystaxis_output/: Cargo.toml
crates/crystaxis_output/src/: lib.rs  plugin.rs
crates/crystaxis_output/src/systems/: mod.rs  ui.rs  update_text.rs
crates/crystaxis_render/: Cargo.toml
crates/crystaxis_render/src/: lib.rs  plugin.rs  prepare.rs
crates/crystaxis_render/src/instancing/: buffer.rs  mod.rs  pipeline.rs  plugin.rs
crates/crystaxis_render/src/sprite3d/: adaptive.rs  material.rs  mod.rs  plugin.rs  systems.rs
crates/crystaxis_render/src/systems/: camera.rs  mod.rs  sync.rs  visuals.rs
